infrastructure/module/network/network.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sandbox-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sandbox-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - sandbox-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: sandbox
        port:
          number: 8080
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: phrase-generator
#spec:
#  hosts:
#    - phrase-generator
#  http:
#  - route:
#    - destination:
#        host: phrase-generator
#        subset: v1
#      weight: 90
#    - destination:
#        host: phrase-generator
#        subset: v2
#      weight: 10
#---
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: phrase-generator
#spec:
#  host: phrase-generator
#  subsets:
#  - name: v1
#    labels:
#      version: v1
#  - name: v2
#    labels:
#      version: v2
